attempting to fix horizontal overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,3 +13,7 @@
 .medium-heading {
   font-size: 1.6rem;
 }
+
+html {
+  overflow-x: hidden;
+}
